scrollbars fix

--- a/app/components/Contacts/ContactsForm.scss
+++ b/app/components/Contacts/ContactsForm.scss
@@ -48,7 +48,7 @@
   }
 
   .networkResults {
-    overflow-y: scroll;
+    overflow-y: auto;
     height: 250px;
     margin-top: 30px;
     padding: 20px 0;
