--- a/app/routes/activity/components/Activity.scss
+++ b/app/routes/activity/components/Activity.scss
@@ -88,7 +88,7 @@
 	padding-bottom: 50px;
 	min-height: 100vh;
 	height: 100vh;
-	overflow-y: scroll;
+	overflow-y: auto;
 	padding-top: 20px;
 
 	&.pulldown {
